--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-yo
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div>
+  <label for="name">Full Name</label>
+  <input type="text" id="name" placeholder="Enter full name" />
+
+  <label for="room">Room Number</label>
+  <input type="text" id="room" placeholder="Enter room number" />
+
+  <label for="checkin-date">Check-In Date</label>
+  <input type="date" id="checkin-date" />
+
+  <label for="checkout-date">Check-Out Date</label>
+  <input type="date" id="checkout-date" />
+
+  <button onclick="saveData()">Check In</button>
+</div>
+</body>
+</html>
