--- a/index.html
+++ b/index.html
@@ -16,5 +16,23 @@
 
   <button onclick="saveData()">Check In</button>
 </div>
+<div>
+  <label for="name">Full Name</label>
+  <input type="text" id="name" placeholder="Enter full name" />
+
+  <label for="room">Room Number</label>
+  <input type="text" id="room" placeholder="Enter room number" />
+
+  <button onclick="saveData()">Check In</button>
+</div>
+<div>
+  <label for="name">Full Name</label>
+  <input type="text" id="name" placeholder="Enter full name" />
+
+  <label for="room">Room Number</label>
+  <input type="text" id="room" placeholder="Enter room number" />
+
+  <button onclick="saveData()">Check In</button>
+</div>
 </body>
 </html>
